# DrumCraker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_wasm.cmd  build_windows.cmd  install_windows.cmd  run_wasm.cmd  tchackpoum-LICENSE.txt
.claude/: launch.json
src/: CacheManager.cpp  CacheManager.h  DrumKitLoader.cpp  DrumKitLoader.h  LockFreeRandom.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleEngine.cpp  SampleEngine.h  VoiceManager.cpp  VoiceManager.h
tchackpoum-drumgizmo-kit/: cowbell_kit.xml  cowbell_kit_midimap.xml  cymbals_kit.xml  cymbals_kit_midimap.xml  hihat_kit.xml  hihat_kit_midimap.xml  kicks_kit.xml  kicks_kit_midimap.xml  main_kit.xml  main_kit_midimap.xml  ride_kit.xml  ride_kit_midimap.xml  snares_kit.xml  snares_kit_midimap.xml  toms_kit.xml  toms_kit_midimap.xml
tchackpoum-drumgizmo-kit/kitpieces/cowbell_lp_bb/: cowbell.xml  cowbell_muff.xml  cowbell_muff_hi.xml
tchackpoum-drumgizmo-kit/kitpieces/crash_14_zildjian_k_custom_dark/: crash_14_zild_bow.xml  crash_14_zild_edg.xml
tchackpoum-drumgizmo-kit/kitpieces/crash_15_sabian_hh/: crash_15_sabi_bow.xml  crash_15_sabi_edg.xml
tchackpoum-drumgizmo-kit/kitpieces/crash_18_zildjian_k_efx/: cymb_18_zild_efx_bow.xml  cymb_18_zild_efx_edg.xml
tchackpoum-drumgizmo-kit/kitpieces/hihat_14_zildjian_k_custom_hybrid/: hihat_zild_clo.xml  hihat_zild_clo_edg.xml  hihat_zild_op1.xml  hihat_zild_op1_edg.xml  hihat_zild_op2.xml  hihat_zild_op2_edg.xml  hihat_zild_op3.xml  hihat_zild_op3_edg.xml  hihat_zild_ped.xml  hihat_zild_spl.xml
tchackpoum-drumgizmo-kit/kitpieces/kick_20_ludwig_superclassic64/: kick_ludw.xml  kick_ludw_damp.xml  kick_ludw_damp_sub.xml  kick_ludw_jazz.xml  kick_ludw_jazz_sub.xml  kick_ludw_sub.xml
tchackpoum-drumgizmo-kit/kitpieces/kick_22_premier_signia/: kick_prem_damp.xml  kick_prem_damp_sub.xml  kick_prem_free.xml  kick_prem_free_sub.xml
tchackpoum-drumgizmo-kit/kitpieces/kick_27_sonor_antique20/: kick_sono.xml  kick_sono_sub.xml
tchackpoum-drumgizmo-kit/kitpieces/mute/: crash_mute.xml  hihat_mute.xml  ride_mute.xml
tchackpoum-drumgizmo-kit/kitpieces/ride_20_paiste_heavy_jazzrock_2002/: ride_20_pais_bel.xml  ride_20_pais_bow.xml  ride_20_pais_edg.xml
tchackpoum-drumgizmo-kit/kitpieces/snare_14x5_ludwig_supraphonic64/: snare_supr64.xml  snare_supr64_edg.xml  snare_supr64_rim.xml
tchackpoum-drumgizmo-kit/kitpieces/snare_14x6.5_pearl_free_floating_maple88/: snare_pear.xml  snare_pear_damp.xml  snare_pear_edg.xml  snare_pear_rim.xml
tchackpoum-drumgizmo-kit/kitpieces/snare_sidestick/: snare_ss.xml
tchackpoum-drumgizmo-kit/kitpieces/toms_premier_signia/: tom_12_prem.xml  tom_12_prem_edg.xml  tom_13_prem.xml  tom_13_prem_edg.xml  tom_16_prem.xml  tom_16_prem_edg.xml
tchackpoum-drumgizmo-kit/notenames/: notenames.txt
tchackpoum-drumgizmo-kit/reaper_track_templates/: drumgizmo_full.RTrackTemplate  main_kit.RTrackTemplate  main_kit_plus_cowbell.RTrackTemplate
web/: README.md  build.sh  serve.mjs
web/public/: app.js  drumcraker-processor.js  drumcraker.wasm  engine.js  index.html  style.css
web/public/kits/tchackpoum/: kit.json
web/src/: drumcraker.cpp  lockfree_random.h
web/tools/: build-web-kit.mjs
